--- a/presentation/BYOOSC/index.Rmd
+++ b/presentation/BYOOSC/index.Rmd
@@ -42,7 +42,7 @@ background-color: #35383b;
 </style>
 
 
----
+--- &vertical
 
 ## How to create a shell company
 
@@ -52,8 +52,11 @@ background-color: #35383b;
 1. move/launder money
 1. profit! 
 
+***
 
----
+<img src="assets/img/jean_jullien_instagram_panama_papers.jpg" />
+
+***
 
 ## problems
 
@@ -61,29 +64,50 @@ background-color: #35383b;
 * drains public coffers and relatively favours the rich
 
 
----
+--- &vertical
+
+<img src="assets/img/panama_papers.jpg" />
+
+***
 
 ## Panama papers
 
 * largest leak in history 
-* x companies, individuals, etc
-* data is provided 
+    * 2.6TB of (original) data 
+    * 11.5 million documents
+    * 29 billionaries
+    * 12 current or former country leaders 
+* data is available at https://offshoreleaks.icij.org/ 
+    * ~320k companies in the dataset
 
---- #custbg
+<!-- http://www.economist.com/news/international/21696497-huge-trove-documents-has-revealed-secrets-offshore-business-presaging-tougher -->
+<!-- http://www.economist.com/blogs/graphicdetail/2016/04/daily-chart-0 -->
 
-## Slide with custom background
+---
 
-<style>
-#custbg {
-  background-image:url("./assets/img/offshore.jpg"); 
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 100%;
-}
-</style>
+## our project
 
-asdf
+* raises awareness on the panama papers leak
+* aims to ridicule the system
+* use "rules" mined from the data to
+    * generate a company name
+    * pick an intermediary
+    * pick a juristiction
+    
+
+---
+
+## results
+
+* application: https://safferli.shinyapps.io/hackathon_shiny/
+* code on github: [@safferli/mission_economy_hackathon2016](https://github.com/safferli/mission_economy_hackathon2016)
+* infographic: on [github](https://github.com/safferli/mission_economy_hackathon2016/blob/master/offshore-company-name-generator.jpg), or on [imgur](https://offshoreleaks.icij.org/)
 
 
+---
+
+## Conclusion
+
+<img src="assets/img/capitalismrocks.jpg" />
 
 
